src/objects/X3_0_Bushenyi_Millet__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_Millet_at_retail_price__c</fullName>
        <label>A Kg of Millet at retail price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_Millet_at_wholesale_pric__c</fullName>
        <label>A Kg of Millet at wholesale pric</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_the_trader_in_Millet__c</fullName>
        <label>Name of the trader in Millet</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Bushenyi__c</fullName>
        <label>3.0 Market Bushenyi</label>
        <referenceTo>Market_Bushenyi__c</referenceTo>
        <relationshipLabel>3.0 Bushenyi Millet</relationshipLabel>
        <relationshipName>X3_0_Bushenyi_Millet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Bushenyi Millet</label>
    <nameField>
        <displayFormat>BM-{0000}</displayFormat>
        <label>3.0 Bushenyi Millet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Bushenyi Millet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>